# multi_ai

./: .cursorrules  .gitignore  DEVELOPMENT_TEMPLATE.md  README.md  autogen_orch.py  pyproject.toml  requirements.txt  run_checks.sh
.github/workflows/: ci.yml
tests/: test_generated_code.py  test_orch.py  test_orch_cli.py
